<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ app_preferences xml
  ~ Created by G.Capelli (BasicAirData) on 3/2/2018
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_category_interface">

        <CheckBoxPreference
            android:key="prefKeepScreenOn"
            android:title="@string/pref_keep_screen_on"
            android:summary="@string/pref_keep_screen_on_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_airdatacomputer">

        <EditTextPreference
            android:key="prefDeviceName"
            android:title="@string/pref_device_name"
            android:summary="HC-05"
            android:defaultValue="HC-05" />

        <ListPreference
            android:key="prefSyncDatetime"
            android:title="@string/pref_sync_datetime"
            android:summary="@string/pref_sync_datetime_android"
            android:entries="@array/DateTimeSync"
            android:entryValues="@array/DateTimeSyncValues"
            android:defaultValue="1" />

        <EditTextPreference
            android:key="prefSDRecordingFrequency"
            android:title="@string/pref_sd_recording_frequency"
            android:summary="50 Hz"
            android:defaultValue="50"
            android:inputType="numberDecimal" />

        <EditTextPreference
            android:key="prefBTDataFrequency"
            android:title="@string/pref_bt_data_frequency"
            android:summary="2 Hz"
            android:defaultValue="2"
            android:inputType="numberDecimal" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_downloads">

        <CheckBoxPreference
            android:key="prefNotifyDownloadFinished"
            android:title="@string/pref_download_notification"
            android:summary="@string/pref_download_notification_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="prefDeleteRemoteFileWhenDownloadFinished"
            android:title="@string/pref_download_delete_remote_file"
            android:summary="@string/pref_download_delete_remote_file_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>
