<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ menu_main xml
  ~ Created by G.Capelli (BasicAirData) on 14/05/2017
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="eu.basicairdata.airdatabridge.AirDataBridgeActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="105"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sync"
        android:visible="true"
        android:orderInCategory="110"
        android:icon="@drawable/ic_sync_white_24dp"
        android:title="@string/action_sync"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_new_logfile"
        android:visible="true"
        android:orderInCategory="120"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/action_new_logfile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_enable_realtime_view"
        android:visible="false"
        android:orderInCategory="130"
        android:icon="@drawable/ic_visibility_off_white_24dp"
        android:title="@string/action_realtime_view"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_disable_realtime_view"
        android:visible="false"
        android:orderInCategory="140"
        android:icon="@drawable/ic_visibility_white_24dp"
        android:title="@string/action_realtime_view"
        app:showAsAction="ifRoom" />
</menu>
